--- a/package.json
+++ b/package.json
@@ -10,15 +10,23 @@
   },
   "dependencies": {
     "@better-auth/expo": "^1.2.9",
+    "@hookform/resolvers": "^5.1.1",
     "@prisma/client": "^6.9.0",
+    "@radix-ui/react-label": "^2.1.7",
+    "@radix-ui/react-slot": "^1.2.3",
     "better-auth": "^1.2.9",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "framer-motion": "^12.17.0",
     "lucide-react": "^0.513.0",
     "next": "15.3.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "tailwind-merge": "^3.3.0"
+    "react-hook-form": "^7.57.0",
+    "resend": "^4.5.2",
+    "tailwind-merge": "^3.3.0",
+    "zod": "^3.25.58",
+    "zustand": "^5.0.5"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
